--- a/src/components/ui/ErrorMessage/index.module.css
+++ b/src/components/ui/ErrorMessage/index.module.css
@@ -1,11 +1,7 @@
-.wrapper {
+.message {
     position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 10;
-    background: white;
-    width: 100%;
-    height: 100%;
-    color: red;
-    text-align: center;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(255, 0, 0, .6) !important;
+    color: white;
 }
